# flow-synth

./: Cargo.toml  LICENSE  README.md  Rocket.toml  rustfmt.toml
fonts/: README.md
livecode-examples/: simple.c
shaders/: pipe_150.glslv  rect_150.glslf  rect_150.glslv  textured_rect_150.glslf  textured_rect_150.glslv
src/: audio_io.rs  basics.rs  control.rs  future_ext.rs  gui.rs  lib.rs  macros.rs  main.rs  module.rs  pixel_scroller.rs  plugin_loader.rs  rainbowgram.rs  serialize.rs  stft.rs  wapi.rs  web_api.rs
src/gui/: button.rs  component.rs  connect.rs  event.rs  geom.rs  layout.rs  menu.rs  mod.rs  module_gui.rs  render.rs  root.rs  textbox.rs
src/modular_flow/: mod.rs
src/module/: audio_io.rs  debug.rs  flow.rs  livecode.rs  mod.rs
webui/: Main.elm  elm-package.json
