[package]
name = "flow-synth"
version = "0.1.0"
authors = ["Noah Weninger <nweninge@ualberta.ca>"]

[dependencies]
glutin = "*"
gfx = "*"
gfx_window_glutin = "*"
gfx_text = "*"
gfx_device_gl = "*"
num = "*"
futures = { git = "https://github.com/nwoeanhinnogaehr/futures-rs", branch = "WakerDerive" }
crossbeam = "*"
